Fix cropped image outlines

--- a/views/css/partials/_layout.sass
+++ b/views/css/partials/_layout.sass
@@ -55,11 +55,11 @@ body
 
         &:nth-of-type(2n+1)
           float: left
-          margin: rhythm(0.5) rhythm() 0 0
+          margin: rhythm(0.5) rhythm() 0 1px
 
         &:nth-of-type(2n)
           float: right
-          margin: rhythm(0.5) 0 0 rhythm(0.5)
+          margin: rhythm(0.5) 1px 0 rhythm(0.5)
 
   #intro
     $intro-padding: 1.5
